--- a/ParseStarterProject/src/main/res/layout/activity_main.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_main.xml
@@ -17,10 +17,9 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="16dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="16dp"
                 android:background="@color/background_color"
                 tools:context=".MainActivity">
     <ImageView
