--- a/ParseStarterProject/src/main/res/layout/forgotpassword_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/forgotpassword_layout.xml
@@ -5,6 +5,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/background_color"
     >
     <TextView
         android:layout_width="fill_parent"
