--- a/ParseStarterProject/src/main/res/layout/login_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/login_layout.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_color"
     >
 
     <LinearLayout
         android:id="@+id/login_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical" >
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="71dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/createAccount"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp">
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="cursive"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/login"
@@ -22,23 +31,25 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
+
         <EditText
             android:id="@+id/login_emailid"
-            android:singleLine="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@android:color/transparent"
             android:drawableLeft="@mipmap/email"
-            android:drawableStart="@mipmap/email"
             android:drawablePadding="8dp"
+            android:drawableStart="@mipmap/email"
             android:gravity="center_vertical"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
+
 
         <View
             android:layout_width="fill_parent"
@@ -47,17 +58,17 @@
 
         <EditText
             android:id="@+id/login_password"
-            android:singleLine="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableStart="@mipmap/password"
             android:drawableLeft="@mipmap/password"
             android:drawablePadding="8dp"
+            android:drawableStart="@mipmap/password"
             android:gravity="center_vertical"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
@@ -67,7 +78,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="5dp"
-            android:paddingTop="8dp" >
+            android:paddingTop="8dp">
 
             <CheckBox
                 android:id="@+id/show_hide_password"
@@ -109,12 +120,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_layout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
         android:gravity="center"
         android:padding="5dp"
         android:text="@string/newUser"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="464dp" />
 
 
 
