--- a/ParseStarterProject/src/main/res/layout/signup_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/signup_layout.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/background_color">
 
     <TextView
         android:layout_width="fill_parent"
