--- a/ParseStarterProject/src/main/res/layout/activity_main.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_main.xml
@@ -6,12 +6,7 @@
   ~ LICENSE file in the root directory of this source tree. An additional grant
   ~ of patent rights can be found in the PATENTS file in the same directory.
   -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    android:scrollbars="none" >
+
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
@@ -20,7 +15,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="5dp"
                 android:paddingBottom="16dp"
-                android:background="@color/background_color"
+                android:background="@drawable/background"
                 tools:context=".MainActivity">
     <ImageView
         android:id="@+id/close_activity"
@@ -44,4 +39,3 @@
 
 
 </RelativeLayout>
-</ScrollView>
