--- a/ParseStarterProject/src/main/res/layout/forgotpassword_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/forgotpassword_layout.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@color/background_color"
+    android:background="@drawable/background"
     >
     <TextView
         android:layout_width="fill_parent"
