--- a/ParseStarterProject/src/main/res/layout/login_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/login_layout.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
+    android:background="@drawable/background"
     >
 
     <LinearLayout
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="100dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/createAccount"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
+            android:fontFamily="casual"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/login"
@@ -47,13 +47,14 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/white_greyish"
             android:textSize="16sp" />
 
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
+            android:layout_marginTop="5dp"
             android:background="@color/white_greyish" />
 
         <EditText
@@ -70,7 +71,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/white_greyish"
             android:textSize="16sp" />
 
         <LinearLayout
