--- a/ParseStarterProject/src/main/res/layout/signup_layout.xml
+++ b/ParseStarterProject/src/main/res/layout/signup_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@color/background_color">
+    android:background="@drawable/background">
 
     <TextView
         android:layout_width="fill_parent"
@@ -14,6 +14,7 @@
         android:text="@string/signUp"
         android:textColor="@color/white_greyish"
         android:textSize="25sp"
+        android:fontFamily="casual"
         android:textStyle="bold" />
 
     <EditText
