--- a/ParseStarterProject/src/main/res/layout/acitvity_splash.xml
+++ b/ParseStarterProject/src/main/res/layout/acitvity_splash.xml
@@ -7,4 +7,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/splash">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="108dp"
+        android:layout_height="173dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.229"
+        app:srcCompat="@mipmap/flingos_launcher" />
 </android.support.constraint.ConstraintLayout>
