--- a/ParseStarterProject/src/main/res/layout/contact_row_view.xml
+++ b/ParseStarterProject/src/main/res/layout/contact_row_view.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
-    android:orientation="vertical"
-    >
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginLeft="2dp"
+    android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        card_view:cardBackgroundColor="@color/white_greyish"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_margin="2dp"
+        android:elevation="3dp"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,11 +65,8 @@
         </LinearLayout>
 
     </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="10px"
-            android:background="@android:color/transparent" />
+
     </LinearLayout>
 
-
+</android.support.v7.widget.CardView>
 </LinearLayout>
