--- a/ParseStarterProject/src/main/res/layout/fragment_center.xml
+++ b/ParseStarterProject/src/main/res/layout/fragment_center.xml
@@ -24,7 +24,8 @@
         android:layout_marginTop="8dp"
         android:scrollbarSize="4dp"
         android:scrollbars="vertical"
-        android:scrollbarThumbVertical="@color/black"
+        android:scrollbarStyle="outsideInset"
+        android:scrollbarThumbVertical="@color/white_greyish"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
