--- a/ParseStarterProject/src/main/res/values/styles.xml
+++ b/ParseStarterProject/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <declare-styleable name="ExpandableTextView">
+        <attr name="trimLength" format="integer"/>
+    </declare-styleable>
+
 </resources>
