--- a/ParseStarterProject/src/main/res/layout/contact_row_view.xml
+++ b/ParseStarterProject/src/main/res/layout/contact_row_view.xml
@@ -45,15 +45,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:id ="@+id/contact_username"
+                    android:id="@+id/contact_username"
+                    style="@style/Pacifics"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="username"
                     android:maxLines="1"
+                    android:text="username"
                     android:textColor="@color/black"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
             <TextView
                 android:id ="@+id/contact_bio"
