--- a/ParseStarterProject/src/main/res/layout/fragment_left.xml
+++ b/ParseStarterProject/src/main/res/layout/fragment_left.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LeftFragment"
-    android:background="@drawable/background_yellow">
+     >
+
+    <com.lorentzos.flingswipe.SwipeFlingAdapterView
+        android:id="@+id/swipecardframe"
+        android:background="@drawable/background_yellow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:rotation_degrees="15.5"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
