--- a/ParseStarterProject/src/main/res/layout/activity_edit_profile.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_edit_profile.xml
@@ -311,7 +311,9 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                    android:paddingRight="10dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -327,9 +329,7 @@
                         android:layout_height="70dp"
                         android:background="@android:color/transparent"
                         android:gravity="bottom"
-                        android:hint="Write something about you"
-                        android:focusable="true"
-                        android:focusableInTouchMode="true"/>
+                        android:hint="Write something about you" />
 
                     <View
                         android:layout_width="match_parent"
@@ -337,7 +337,7 @@
                         android:layout_marginTop="2dp"
                         android:background="@color/colorAccent" />
 
-                    <EditText
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
