Fixed adapter defects

--- a/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
@@ -125,8 +125,7 @@
         android:id="@+id/more_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:visibility="gone">
+        android:layout_marginTop="70dp">
 
 
         <RelativeLayout
