Minor bug fixes and UI updates

--- a/ParseStarterProject/src/main/res/layout/activity_btn_like.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_btn_like.xml
@@ -39,6 +39,27 @@
             android:textColor="@color/likegreen"
             android:textSize="40sp" />
 
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:fontFamily="@font/kaushanscript"
+            android:text="It's a Match!"
+            android:textAlignment="center"
+            android:textColor="@color/pink"
+            android:textSize="40dp"
+            android:textStyle="bold">
+
+        </TextView>
     </FrameLayout>
 
     <LinearLayout
@@ -47,7 +68,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="30dp"
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
