--- a/ParseStarterProject/src/main/res/drawable/round_button_with_border.xml
+++ b/ParseStarterProject/src/main/res/drawable/round_button_with_border.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <stroke android:width="1dp" android:color="@color/light_grey" />
+            <stroke android:width="1dp" android:color="@color/pink" />
 
             <solid android:color="@color/white" />
             <size android:width="70dp" android:height="70dp" />
