--- a/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
@@ -104,11 +104,13 @@
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
+
                         android:background="@drawable/round_button_with_border"
                         android:elevation="7dp"
                         android:onClick="LikeBtn"
                         android:padding="10dp"
-                        android:src="@drawable/ic_like1"
+
+                        android:src="@drawable/heart_icon"
 
                         />
 
