--- a/ParseStarterProject/src/main/res/layout/activity_matched.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_matched.xml
@@ -27,15 +27,18 @@
                 android:drawableLeft="@drawable/ic_search"
                 android:drawablePadding="10dp"
                 android:hint="Seearch Here..."
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:visibility="gone"/>
 
             <View
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_margin="@dimen/_5dp"
                 android:background="@color/devider" />
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -46,6 +49,7 @@
                 android:textSize="20sp" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
                 android:id="@+id/active_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
