Match partner bug fix

--- a/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_main_flingos.xml
@@ -110,7 +110,7 @@
                         android:onClick="LikeBtn"
                         android:padding="10dp"
 
-                        android:src="@drawable/heart_icon"
+                        android:src="@drawable/ic_like1"
 
                         />
 
