Complete chat and Profile

--- a/ParseStarterProject/src/main/res/layout/activity_edit_profile.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_edit_profile.xml
@@ -399,6 +399,38 @@
                         android:gravity="bottom"
                         android:hint="Add school"
                         android:padding="@dimen/_5dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Age"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/user_age"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:gravity="bottom"
+                        android:hint="Add Age"
+                        android:padding="@dimen/_5dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Interest"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/user_interest"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:gravity="bottom"
+                        android:hint="Add Interest"
+                        android:padding="@dimen/_5dp" />
 
                     <View
                         android:layout_width="match_parent"
