--- a/ParseStarterProject/src/main/res/layout/activity_chat.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_chat.xml
@@ -10,32 +10,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.parse.starter.ChatActivity">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/chatEditText" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/chatEditText"
+        android:layout_above="@+id/layout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/chatListView" />
-
-    <Button
-        android:text="Send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/sendChatButton"
-        />
+        android:layout_alignParentLeft="true">
+
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:layout_weight="1"
+            android:id="@+id/chatEditText" />
+
+        <Button
+
+            android:text="Send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sendChatButton"
+
+            />
+    </LinearLayout>
+
+
+
+
 
 </RelativeLayout>
